Profile: Fix avatar flicker on collapse animation (#6335)

--- a/src/components/common/profile/ProfileInfo.module.scss
+++ b/src/components/common/profile/ProfileInfo.module.scss
@@ -468,20 +468,7 @@
 
 @include mixins.on-active-vt('profileExpand') {
   &::view-transition-old(.avatar) {
-    :local {
-      animation-name: fadeOut;
-      animation-duration: 0.1s;
-    }
-
-    @keyframes fadeOut {
-      from {
-        opacity: 1;
-      }
-
-      to {
-        opacity: 0;
-      }
-    }
+    z-index: -1;
   }
 
   &::view-transition-new(.avatar) {
@@ -511,21 +498,7 @@
 
 @include mixins.on-active-vt('profileCollapse') {
   &::view-transition-new(.avatar) {
-    :local {
-      animation-name: fadeIn;
-      animation-duration: 0.125s;
-      animation-delay: 0.125s;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-
-      to {
-        opacity: 1;
-      }
-    }
+    z-index: -1;
   }
 
   &::view-transition-old(.avatar) {
@@ -542,11 +515,8 @@
       }
 
       25% {
-        clip-path: inset(0 0 0 0 round 50%);
-      }
-
-      50% {
         opacity: 1;
+        clip-path: inset(0 0 0 0 round 50%);
       }
 
       to {
